# riscv-console

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  debug
renderer/: CMakeLists.txt
renderer/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
renderer/debug/PureC-Software-Renderer/: cmake_install.cmake  renderer
renderer/debug/PureC-Software-Renderer/Mango/: cmake_install.cmake
renderer/debug/firmware/: cmake_install.cmake  firmware
renderer/debug7/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
renderer/debug7/PureC-Software-Renderer/: cmake_install.cmake  renderer
renderer/debug7/PureC-Software-Renderer/Mango/: cmake_install.cmake
renderer/debug7/firmware/: cmake_install.cmake  firmware
renderer/firmware/: CMakeLists.txt  riscv-firmware-group7.strip  riscv32-console.ld
renderer/firmware/src/: main.c  startup.c
riscv-render/: CMakeLists.txt
riscv-render/cartridge/: CMakeLists.txt
riscv-render/cartridge/src/: cube.c  main.c
riscv-render/firmware/: Makefile
riscv-render/firmware/src/: main.c  startup.c
submission/: CMakeLists.txt
submission/.cache/clangd/index/: main.c.1B7AC8F581C6DC54.idx  main.c.F6108574F55B7453.idx  startup.c.AB384707F6675DF8.idx  startup.c.F3E6B4F34900EA4A.idx
submission/cartridge/: CMakeLists.txt  riscv32-console.ld
submission/cartridge/src/: interrupt.s  main.c  startup.c
submission/firmware/: CMakeLists.txt  riscv32-console.ld
submission/firmware/src/: main.c  startup.c
